# sopel-meetbot

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_meetbot/: plugin.py
